api: Enable project.create
